@@ -1,5 +1,5 @@
 
 :- initialization((
-	logtalk_load([category, objects, database, plain, benchmarks], [events(deny)]),
+	logtalk_load([category, objects, database, plain, maze, benchmarks], [events(deny)]),
 	(current_logtalk_flag(modules, supported) -> ensure_loaded(module); true)
 )).
